# CVLite.cpp

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt
examples/: CMakeLists.txt  simple_inference.cpp
include/cvlite/core/: parameter.hpp  tensor.hpp
include/cvlite/layers/: conv3x3.hpp  layer.hpp  relu.hpp  softmax.hpp
include/cvlite/pipeline/: sequential.hpp
src/: CMakeLists.txt
src/core/: tensor.cpp
src/layers/: conv3x3.cpp  relu.cpp  softmax.cpp
src/pipeline/: sequential.cpp
tests/: CMakeLists.txt
